# OAUTH2-via-GITHUB-with-REPOSITORIES-integration

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  csrf_util.py  main.py
app/routes/: auth.py
